# plugin.video.elementum

./: .gitignore  ISSUES_CHECKLIST.txt  LIBTORRENT_UPGRADE_PLAN.md  LOGGING_ANALYSIS_REPORT.md  LOGGING_ISSUES_LIST.md  LOOKBEHIND_IMPLEMENTATION.md  MAINTAINABILITY_REPORT.md  MAINTAINABILITY_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_ISSUE_INDEX.md  PERFORMANCE_QUICK_REFERENCE.md  PERFORMANCE_REPORT_SUMMARY.txt  QUICK_REFERENCE_SEEK_ISSUES.txt  SEEK_ANALYSIS.md  SEEK_PERFORMANCE_DETAILED.md  SEEK_PERFORMANCE_EVALUATION.md  claude.md
.github/: claude.md
.github/ISSUE_TEMPLATE/: claude.md
.github/PULL_REQUEST_TEMPLATE/: claude.md
build_lookbehind/: BUILD_INSTRUCTIONS.md
daemon_implementation/: QUICK_START.md  README.md  build_lookbehind.sh  test_lookbehind.sh
daemon_implementation/libtorrent-go/: memory_storage_lookbehind.go  memory_storage_lookbehind.hpp
resources/: claude.md  settings.xml
resources/img/: claude.md
resources/language/: claude.md  messages.pot
resources/screenshots/: claude.md
resources/skins/: claude.md
resources/web/: claude.md
resources/web-src/: claude.md
scripts/: claude.md
upgrade_1.2.x/: CORRECTION_STORAGE_EXISTS.md  CRITICAL_ARCHITECTURE_CHANGE.md  EVALUATION_GAPS.md  README.md  upgrade.sh
upgrade_1.2.x/libtorrent-go/: Makefile.patch  memory_storage.hpp
upgrade_1.2.x/tests/: upgrade_test.go
upgrade_2.0.x/: ALERT_ISSUES_SUMMARY.txt  ALERT_SYSTEM_EVALUATION.md  API_ACCURACY_EVALUATION.md  API_EVALUATION_EXECUTIVE_SUMMARY.txt  BUILD_CONFIG.md  CORRECTIONS_NEEDED.md  CRITICAL_EVALUATION.md  CURRENT_STATUS.md  DOCUMENTATION_EVALUATION_REPORT.md  EVALUATION_INDEX.md  EVALUATION_SUMMARY.md  EVALUATION_SUMMARY_QUICK.md  FUNCTION_STATUS_MATRIX.txt  GO_WRAPPER_EVALUATION.md  GO_WRAPPER_EVALUATION_INDEX.md  MEMORY_ANALYSIS_INDEX.md  MEMORY_EXECUTIVE_SUMMARY.md  MEMORY_ISSUES_VISUAL.txt  MEMORY_MANAGEMENT_ANALYSIS.md  MIGRATION_PLAN.md  OFFICIAL_API_CHANGES.md  QUICK_FIX_GUIDE.md  README.md  RECOMMENDED_TEST_CASES.md  REPORT_LOCATIONS.txt  SWIG_EVALUATION_REPORT.md  TEST_COVERAGE_EVALUATION.md  TEST_COVERAGE_SUMMARY.md  TEST_EVALUATION_README.md  THREAD_SAFETY_ANALYSIS.md  THREAD_SAFETY_CODE_SNIPPETS.md  THREAD_SAFETY_QUICK_REFERENCE.md  THREAD_SAFETY_README.md  WRAPPER_ISSUES_SUMMARY.md
upgrade_2.0.x/libtorrent-go/: CMakeLists.txt  Makefile  libtorrent.i  memory_disk_io.hpp
upgrade_2.0.x/libtorrent-go/go/: info_hash_wrapper.go  session_wrapper.go  storage_wrapper.go
upgrade_2.0.x/libtorrent-go/interfaces/: add_torrent_params.i  alerts.i  disk_interface.i  extensions.i  info_hash.i  session.i  session_params.i  torrent_handle.i
upgrade_2.0.x/tests/: upgrade_test.go
(+31 files in other folders)
